--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
             unzip pes-fmdl-blender-2-79.zip
             ls -la
+            ls -la pes-fmdl/*
             mv pes-fmdl/__init_2-8x.py pes-fmdl/__init__.py
             ls -la
             zip -r pes-fmdl-blender-2-8x.zip pes-fmdl
