--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,8 +26,7 @@ jobs:
             unzip pes-fmdl-blender-2-79.zip
             ls -la
             ls -la pes-fmdl/*
-            cwd
-            mv pes-fmdl/__init_2-8x.py pes-fmdl/__init__.py
+            mv ${{ github.workspace }}/packages/pes-fmdl/__init_2-8x.py ${{ github.workspace }}/packages/pes-fmdl/__init__.py
             ls -la
             zip -r pes-fmdl-blender-2-8x.zip pes-fmdl
             zip -d pes-fmdl-blender-2-79.zip pes-fmdl/__init_2-8x.py
