--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,10 +24,9 @@ jobs:
         shell: bash
         run: |
             unzip pes-fmdl-blender-2-79.zip
-            ls -la
-            ls -la pes-fmdl/*
+            ls -la ${{ github.workspace }}/packages/pes-fmdl/*
             mv ${{ github.workspace }}/packages/pes-fmdl/__init_2-8x.py ${{ github.workspace }}/packages/pes-fmdl/__init__.py
-            ls -la
+            ls -la ${{ github.workspace }}/packages
             zip -r pes-fmdl-blender-2-8x.zip pes-fmdl
             zip -d pes-fmdl-blender-2-79.zip pes-fmdl/__init_2-8x.py
         
