--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Packs files
         working-directory: ${{ github.workspace }}/packages
         run: |
-            unzip pes-fmdl-blender-2-79.zip && mv pes-fmdl/__init_2-8x.py pes-fmdl/__init__.py && zip -r pes-fmdl-blender-2-8x.zip pes-fmdl && zip -d pes-fmdl-blender-2-79.zip pes-fmdl/__init_2-8x.py
+            unzip pes-fmdl-blender-2-79.zip && mv pes-fmdl/pes-fmdl/__init__2-8x.py pes-fmdl/__init__.py && zip -r pes-fmdl-blender-2-8x.zip pes-fmdl && zip -d pes-fmdl-blender-2-79.zip pes-fmdl/__init_2-8x.py
         
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
